# narrator

app/: .eslintignore  .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/_figma/AI Narrator App Design/src/components/: DashboardPage.tsx  LeftSidebar.tsx  MainContent.tsx  ThemeSelector.tsx
app/src/_figma/AI Narrator App Design/src/imports/: ManualMode.tsx
app/src/components/: LeftSidebar.tsx  MainContent.tsx  RightSidebar.tsx  ThemeProvider.tsx  ThemeSelector.tsx  TopBar.tsx
app/src/components/ui/: calendar.tsx  chart.tsx  dropdown-menu.tsx
app/src/pages/: AudioVideoMixingPage.tsx  AutoMode.tsx  BackgroundAudioPage.tsx  DashboardPage.tsx  ManualMode.tsx  OutputConfigurationPage.tsx  ResultsPage.tsx  TextCleaningPage.tsx  VisualElementsPage.tsx  VoiceTTSPage.tsx
core/: Cargo.toml
docs/: ARCHITECTURE.md  CONTRIB_GUIDE.md  DEBUG_LOGS.md  DEBUG_REPORT.md  DEPENDENCY_AUDIT_REPORT.md  ENV_NOTES.md
figma-ui/AI Narrator App Design/: README.md  index.html  package.json
figma-ui/AI Narrator App Design/src/: App.tsx  index.css
figma-ui/AI Narrator App Design/src/components/: AudioVideoMixingPage.tsx  BackgroundAudioPage.tsx  OutputConfigurationPage.tsx  ResultPage.tsx  RightSidebar.tsx  RightSidebarUpdated.tsx  TextCleaningPage.tsx  ThemeProvider.tsx  TopBar.tsx  VisualElementsPage.tsx  VoiceTTSPage.tsx
workers/python/: pyproject.toml
workers/rust/: Cargo.toml
(+2 files in other folders)
