[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "narrator-workers-python"
version = "0.1.0"
description = "Python workers for narrator project"
requires-python = ">=3.8"

[project.dependencies]
# Audio processing
auditok = "^0.2.0"
pydub = "^0.25.1"

# Text processing
nltk = "^3.8.1"
spacy = "^3.7.2"

# Web requests
requests = "^2.31.0"

# Data processing
pandas = "^2.1.3"
numpy = "^1.26.2"

[tool.setuptools.packages.find]
where = ["."]